[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/Candy/Level.gd" type="Script" id=1]
[ext_resource path="res://assets/Fontes/fonteCandy80.fnt" type="BitmapFont" id=2]
[ext_resource path="res://assets/Candy/gui/b_8.png" type="Texture" id=3]
[ext_resource path="res://scripts/Candy/MovesBoard.gd" type="Script" id=4]
[ext_resource path="res://assets/Candy/gui/3.png" type="Texture" id=5]
[ext_resource path="res://assets/Candy/gui/5.png" type="Texture" id=6]
[ext_resource path="res://scripts/Candy/Bar.gd" type="Script" id=7]
[ext_resource path="res://assets/Candy/gui/bar_1.png" type="Texture" id=8]
[ext_resource path="res://assets/Candy/gui/bar_2.png" type="Texture" id=9]
[ext_resource path="res://assets/Candy/gui/s2.png" type="Texture" id=10]
[ext_resource path="res://scripts/Candy/CandyManager.gd" type="Script" id=11]
[ext_resource path="res://assets/screen_controls/shadedDark/shadedDark14.png" type="Texture" id=12]

[node name="Level" type="Node"]

process/pause_mode = 1
script/script = ExtResource( 1 )

[node name="Back" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 1280.0
color = Color( 1, 0.905882, 0.858824, 1 )

[node name="Top" type="Sprite" parent="."]

transform/pos = Vector2( 0.735107, 1 )
transform/scale = Vector2( 0.5, 0.5 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1600, 460 )

[node name="ColorFrame" type="ColorFrame" parent="Top"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 0.0
margin/right = 1598.0
margin/bottom = 442.0
color = Color( 0.894531, 0.377517, 0.276047, 1 )

[node name="Label 2" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 361.0
margin/top = 25.0
margin/right = 791.0
margin/bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "Jogadas"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MovesBoard" type="Sprite" parent="."]

transform/pos = Vector2( 463.175, 140.676 )
transform/scale = Vector2( 0.384746, 0.363911 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="Number1" type="Sprite" parent="MovesBoard"]

transform/pos = Vector2( -57.1011, 7.99759 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="Number2" type="Sprite" parent="MovesBoard"]

transform/pos = Vector2( 57.7834, 10.7455 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Bar" type="Sprite" parent="."]

transform/pos = Vector2( 162.792, 79.8889 )
transform/scale = Vector2( 0.5, 0.5 )
script/script = ExtResource( 7 )
starOn = "res://assets/Candy/gui/s1.png"

[node name="Back" type="Sprite" parent="Bar"]

transform/scale = Vector2( 0.27, 0.25 )
texture = ExtResource( 8 )

[node name="Blue" type="Sprite" parent="Bar"]

transform/pos = Vector2( -261.014, -37.0932 )
transform/scale = Vector2( 0.275, 0.275 )
texture = ExtResource( 9 )
centered = false
region = true

[node name="Star3" type="Sprite" parent="Bar"]

transform/pos = Vector2( 240, 77 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Star2" type="Sprite" parent="Bar"]

editor/display_folded = true
transform/pos = Vector2( 90, 77 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="ColorFrame1" type="ColorFrame" parent="Bar/Star2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = -492.0
margin/right = 12.0
margin/bottom = -290.0
color = Color( 1, 1, 1, 1 )

[node name="Star1" type="Sprite" parent="Bar"]

editor/display_folded = true
transform/pos = Vector2( -60, 77 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="ColorFrame" type="ColorFrame" parent="Bar/Star1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -19.0
margin/top = -492.0
margin/right = 2.0
margin/bottom = -290.0
color = Color( 1, 1, 1, 1 )

[node name="Board" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 62.0
margin/top = 290.0
margin/right = 737.0
margin/bottom = 1190.0
color = Color( 0.984314, 0.792157, 0.701961, 1 )

[node name="Candies" type="Node" parent="."]

script/script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Candies"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="Inter" type="Timer" parent="Candies"]

process_mode = 1
wait_time = 0.8
one_shot = false
autostart = false

[node name="PauseButton" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 645.138, 52.7455 )
transform/scale = Vector2( 2, 2 )
normal = ExtResource( 12 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="add_points" from="Candies" to="Bar" method="_on_Candies_add_points"]

[connection signal="played" from="Candies" to="MovesBoard" method="_on_Candies_played"]

[connection signal="timeout" from="Candies/Timer" to="Candies" method="_on_Timer_timeout"]

[connection signal="timeout" from="Candies/Inter" to="Candies" method="_on_Inter_timeout"]

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]


